public/style/main.css
.COLORS_URL {
  /*
    COLORS : https://upload.wikimedia.org/wikipedia/commons/e/e7/SVG1.1_Color_Swatch.svg
    ARROWS : https://www.toptal.com/designers/htmlarrows/arrows/

  */
  color: red;
}

html {
  font-family: Roboto, sans-serif;
  font-size: 10px;
  height: 100vh;
}
body {
  display: flex;
  flex-direction: column;
  /* align-items: center; */
  /* font-size: 16px; */
}

.hidden {
  display: none;
}
#app {
  display: flex;
  flex-direction: column;
}
.menu {
  display: flex;
  justify-content: left;
  align-items: center;
}
.priceRed,
.priceGreen {
  font-weight: bold;
}
.priceRed,
.red {
  color: red;
}
.priceGreen {
  color: green;
}
.pcrGreen {
  color: #77e777;
}
.itm {
  background-color: #e8e8e8 !important;
}
.atm {
  background-color: orange;
}
.atmStrike {
  font-size: 120%;
  background-color: darkorchid !important;
  color: white;
}
.call {
  background-color: rgb(173, 225, 47);
  font-size: 120%;
}
.put {
  background-color: #ff7f50;
  font-size: 120%;
}
.strikePrice {
  background-color: rgb(174, 243, 243);
  text-align: center !important;
}
.stats {
  background-color: rgb(223, 237, 144);
  text-align: center !important;
  padding: 3px 0;
  font-weight: bold;
}
.pcr {
  font-size: 80%;
}
.spotprice {
  color: brown;
}
.spotprice,
.symbol {
  font-size: 14px;
}

.headerActions {
  display: flex;
  align-items: stretch;
  /* padding: 6px; */
}
.timestamp,
.actions {
  font-size: 12px;
  color: rgb(86, 109, 109, 0.9);
  /* flex-basis: 50%; */
  display: flex;
  align-items: center;
  white-space: nowrap;
}
.timestamp {
  flex-basis: 25%;
}
.actions {
  justify-content: right;
  flex: auto;
}
.actions label {
  cursor: pointer;
}

table.report,
table.report td,
table.report th,
table.report tr {
  border-collapse: collapse;
  border: 1px solid rgba(206, 205, 205, 0.5);
  white-space: nowrap;
}
.container,
.oichart,
.chainTabContainer {
  display: flex;
  /* justify-content: center; */
  /* align-items: center; */
  overflow: auto;
}
.chainTabContainer,
.oichart {
  justify-content: center;
  /* overflow: auto; */
}

.oiTrendContainer {
  display: flex;
}
.oiSeriesContainer {
  display: flex;
  flex-direction: column;
}
.oiSeries {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  border: 1px solid silver;
}
.oiSeriesHeader {
  font-size: 12px;
}
.innerContainer {
  /* flex: 49%; */
  border: 1px solid grey;
  padding: 3px;
}
table.report tr td,
table.report tr th {
  padding: 4px 6px;
}
table.report tr td {
  text-align: right;
}
table.report tr th {
  font-weight: bold;
  text-align: center;
}
.reportHeader {
  text-align: center;
  font-size: medium;
  font-weight: bold;
}
.tabHeader {
  background-color: rgb(3, 70, 97);
  color: ivory;
}
.oiDifference {
  background-color: rgb(248, 235, 219);
  font-weight: bold;
  text-align: center !important;
}
.totals td {
  font-weight: bold;
}
.highVolumeCall,
.highOICall,
.highVolumePut,
.highOIPut,
.secondHigh {
  font-size: small;
  font-weight: bold;
}
.highVolumeCall {
  background-color: red !important;
  color: ivory;
}
.highOICall {
  background-color: lightcoral !important;
}
.highOIchgCall,
.highOIchgPut {
  background-color: darkolivegreen !important;
  color: ivory;
}
.highVolumePut {
  background-color: rgb(5, 129, 78) !important;
  color: ivory;
}
.highOIPut {
  background-color: greenyellow !important;
}
.secondHigh {
  background-color: yellow !important;
}
.thirdHigh {
  background-color: rgb(229, 248, 153) !important;
}
.tips {
  padding: 10px 0;
  color: grey;
}
.discount {
  color: brown !important;
  font-weight: bold;
  font-size: small;
  /* background-color: ivory !important; */
}
.premium {
  color: grey;
  font-size: xx-small;
}

.chartLayout {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.chartLayout .title {
  font-weight: bold;
  color: #154881;
}
.expiry,
.timer {
  font-size: large;
  color: brown;
}

.LB {
  background-color: greenyellow;
  color: black;
}
.LU {
  background-color: #ffdab9;
  color: black;
}
.SB {
  background-color: #ff7f50;
  color: black;
}
.SC {
  background-color: #b4d9ef;
  color: black;
}

.UP:before,
.DOWN:before,
.LEFT:before,
.RIGHT:before {
  font-size: 12px;
  font-family: u1f800;
  padding-right: 3px;
}
.UP:before {
  /* content: "↑"; */
  /* content: "🠕"; */
  /* content: "⮝"; */
  /* content: "⮙"; */
  content: "▲";
}
.DOWN:before {
  /* content: "↓"; */
  /* content: "🠗"; */
  /* content: "⮛"; */
  /* content: "⮟"; */
  content: "▼";
}
.LEFT:before {
  /* content: "↑"; */
  /* content: "⮘"; */
  content: "⮜";
}
.RIGHT:before {
  /* content: "↑"; */
  /* content: "⮚"; */
  content: "⮞";
}
.NETUTRAL {
  font-size: 20px;
  /* &#10500; */
}
.NEUTRAL:before {
  /* content: "↔"; */
  content: "⬌";
  font-size: 12px;
  font-family: u1f800;
  padding-right: 3px;
}

.notes {
  display: flex;
}
.notes div {
  flex-basis: 50%;
  padding: 3px 5px;
  margin: 2px;
  border: 1px solid gray;
}

.oiTrendContainer {
  display: flex;
  justify-content: center;
  flex-direction: column;
}
.analysis {
  display: flex;
  flex-direction: column;
  flex-basis: 40%;
  justify-content: center;
  font-size: 110%;
}
.bold {
  font-weight: bold;
}

